2014-04-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c demo/heatmaps.dem docs/gnuplot.doc:
	Document and add a demo for "with image pixels" (formerly "failsafe").

2014-04-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c (test_palette_command):  Write the palette colors into
	a datablock $PALETTE rather than writing them as in-line data in a temp
	file.  Simplify the internal command sequence that generates the test
	output.  TODO: Move the command sequence into a datablock as well.

2014-03-30 Bastian Maerkisch  <bmaerkisch@web.de>

	* term/caca.trm:  Change codepage from 932 to 437 on Japanese Windows.
	Apparently this fixes display problems, although libcaca uses unicode
	functions to write to screen.
	Bug #1361

	* src/eval.c src/internal.c|h src/parse.c:  Implement f_words instead
	of treating it as a special case in the parser.

	* src/command.c src/command.h src/plot.c src/stdfn.h src/syscfg.h
	src/win/wgraph.c src/win/winmain.c src/win/wprinter.c:  Include file
	cleanup.

	* src/win/screenbuf.c:  Avoid crashes on memory allocation errors.

	* src/makefile.all src/makefile.awc:  Recreate to include multiplot.c.

	* demo/lines_arrows.dem:  UTF-8 encoding.

	* config/mingw/Makefile:  Fix non-numeric version number due to
	patchlevel "alpha".

2014-03-29  Christoph Bersch <usenet@bersch.net>

	* src/multiplot.h src/multiplot.c demo/layout.dem docs/gnuplot.doc:
	New autolayout options for multiplot:
	  set multiplot layout margins LEFT, RIGHT, BOTTOM, TOP spacing GAP
	Patch #611

2014-03-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (multiplot_current_panel) term/svg.trm src/term_api.h:
	Hide internal data structure behind an access function.

	* src/multiplot.h src/multiplot.c src/term.c src/term_api.h
	src/Makefile.am:  Move multiplot layout code from term.c into a new
	file multiplot.c.

2014-03-27  Shigeharu Takeno  <shige@iee.niit.ac.jp>
