@@ -1,5 +1,5 @@
 /*
- * $Id: tables.h,v 1.89 2014/03/22 23:09:06 sfeam Exp $
+ * $Id: tables.h,v 1.90 2014/04/02 21:36:05 sfeam Exp $
  */
 
 /* GNUPLOT - tables.h */
@@ -170,7 +170,7 @@ enum set_pm3d_id {
     S_PM3D_DEPTH,
     S_PM3D_FLUSH, S_PM3D_FTRIANGLES, S_PM3D_NOFTRIANGLES,
     S_PM3D_CLIP_1IN, S_PM3D_CLIP_4IN,
-    S_PM3D_MAP, S_PM3D_HIDDEN, S_PM3D_NOHIDDEN,
+    S_PM3D_MAP, S_PM3D_BORDER, S_PM3D_NOBORDER, S_PM3D_HIDDEN, S_PM3D_NOHIDDEN,
     S_PM3D_SOLID, S_PM3D_NOTRANSPARENT, S_PM3D_NOSOLID, S_PM3D_TRANSPARENT,
     S_PM3D_IMPLICIT, S_PM3D_NOEXPLICIT, S_PM3D_NOIMPLICIT, S_PM3D_EXPLICIT,
     S_PM3D_WHICH_CORNER
