@@ -3,6 +3,17 @@
 	* src/misc.c demo/heatmaps.dem docs/gnuplot.doc:
 	Document and add a demo for "with image pixels" (formerly "failsafe").
 
+	* src/color.c src/plot3d.c src/pm3d.c src/pm3d.h src/save.c src/set.c
+	src/show.c src/tables.c src/tables.h src/term.c src/unset.c:
+	Revise "set pm3d hidden3d <lt>" to match other places where you can
+	specify line properties.
+	- Full syntax is now "set hidden3d {no}border {line-properties}"
+	- Individual line properties can be overridden in the plot command
+	- Old sytax is accepted as a synonym for "set hidden3d border lc <lt>"
+
+	* demo/transparent_solids.dem docs/gnuplot.doc:
+	Update documentation and demo to show new syntax
+
 2014-04-01  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/command.c (test_palette_command):  Write the palette colors into
